pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints14.pkl
open class Foo {
  name: String = "Foo"
}

class Bar extends Foo {
  bub: String(startsWith(super.name)) = "Bubby"
}

bar: Bar
